===================================
imGlossary v1.00 Final
===================================
- Added: option to display 3 center blocks on index page or Search block
- Added: option to display random term block on index or not
- Added: options to select editor for admin and user side
- Added: comment total in alt- and title tag of icon
- Added: GPL2 license incl. translations

- Replaced: some icons
- Replaced: 'Xoops code' with 'BBCode'

- Fixed: pagination for listing 'All' (again)
- Fixed: pagination for listing 'All Categories'
- Fixed: searching terms
- Fixed: block settings [skenow]


===================================
imGlossary v1.00 RC-2
===================================
- Added: option to set background colour searched terms
- Added: import script Wiwimod
- Added: import script Wordbook
- Added: About page (IcmsModuleAbout)
- Added: link to module update
- Added: pdf support
- Added: captcha to submit form
- Added: captcha to request form
- Added: captcha can be turned on/off in Preferences

- Replaced: import script Dictionary
- Replaced: admin menu (displayAdminMenu)

- Removed: imglossary/templates/imglossary_request.html
- Removed: imglossary/templates/imglossary_submit.html

- Fixed: problem search option, unknown function
- Fixed: letter-bar, only those letters containing terms have url assigned
- Fixed: pagination for listing 'All'
- Fixed: url administration icon in random block


===================================
imGlossary v1.00 RC-1
===================================
First version of imGlossary
- Added: prefix to module functions
- Added: option to hide author of an entry
- Added: comments button in administration
- Added: Social Bookmarks
- Added: administration icon

- Restyled index page
- Integrated admin/submissions.php in admin/index.php
- Replaced icons

- Module folder can be renamed
- Fixed: search option
- Fixed: submit form
- Fixed: GIJOE's myblocksadmin, works with ICMS blocks
- Fixed: vulnerability, used StopXSS